[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "uiutils"
author = "Mikael Honkala"
author-email = "mikael.honkala@gmail.com"
home-page = "https://github.com/mikaelho/uiutils"
dist-name = "pythonista-uiutils"
description-file = "README.md"
license = "TheUnlicense"
classifiers = [
    "Operating System :: iOS"
]
